--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <main>
-  <header class="brand-name">
-    <img class="brand-logo" src="assets/house.svg" alt="logo" aria-hidden="true">
-    <strong>Homes</strong>
-  </header>
+  <a [routerLink]="['/']">
+    <header class="brand-name">
+      <img class="brand-logo" src="/assets/house.svg" alt="logo" aria-hidden="true">
+      <strong>Homes</strong>
+    </header>
+  </a>
   <section class="content">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
+  </section>
+
+  <section class="content">
+    <router-outlet></router-outlet>
   </section>
 </main>
 
